--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js"></script>
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>
-        NHẬP TÊN CỦA BẠN:
-    </h1><br>
 
-    <input type="text" placeholder="Your name">
-    <button type="submit" onclick="myFunc()">OKE</button>
-    <br><br><br><br><br>
-    <h1 id="text"></h1>
+<body>
+    <div class="container">
+        <h1>
+            NHẬP TÊN CỦA BẠN:
+        </h1><br>
+        <div class="form">
+            <input type="text" placeholder="Your name">
+            <button type="submit" onclick="myFunc()">OKE</button>
+        </div>
+
+        <br><br><br><br><br>
+        <h1 id="text"></h1>
+    </div>
+
 </body>
 
 </html>
